some style updates. Also fix bug where full screen youtube video wouldn't exit on safari

--- a/static/css/pages/common.css
+++ b/static/css/pages/common.css
@@ -205,6 +205,10 @@ h1 {
   max-width: 220px!important;
 }
 
+.mw-200 {
+  max-width: 200px!important;
+}
+
 .mw-940 {
   max-width: 940px!important;
 }
