--- a/static/css/pages/investors.css
+++ b/static/css/pages/investors.css
@@ -14,6 +14,8 @@
 .investors-page .section-desc {
   margin-bottom: 3rem;
   text-align: center;
+  font-weight: normal;
+  font-size: 1.125rem;
 }
 
 .investors-page .individual-investors-section {
