--- a/static/css/pages/landing.css
+++ b/static/css/pages/landing.css
@@ -326,10 +326,8 @@
 }
 
 .decentralised-marketplaces .tiles-holder .image-holder {
-  width: 220px;
-  height: 220px;
-  border: solid 1px #dbe6eb;
-  background-color: white;
+  width: 200px;
+  height: 200px;
 }
 
 .decentralised-marketplaces .tiles-holder .tile-name {
