--- a/static/css/pages/token.css
+++ b/static/css/pages/token.css
@@ -116,6 +116,7 @@
   max-width: 280px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 10px;
 }
 
 .tokens-page .primary-cta {
